Feat: Getting List of Teachers API set up.